Thu Aug  5 11:55:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/socket/socket.c: use _() macro instead of __P(), because the
	  former is provided by ruby's defines.h but the latter is offered
	  by some systems only by chance.  this fixes build failure with VC.

Fri Jul 30 17:51:20 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/-test-/add_suffix/bug.c: typo.

Fri Jul 30 08:51:51 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): home directory must be absolute.
	  [ruby-core:31537]

Fri Jul 30 08:33:20 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (file_expand_path): should check if could find user.
	  [ruby-core:31538]

Fri Jul 30 07:59:53 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (ruby_add_suffix): fixed a bug returning uninitialized
	  value.

Fri Jul 30 07:48:04 2010  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/extconf.rb: use TK_XINCLUDES on tkConfig.sh when not empty,
	  even if MacOS X Aqua version [ruby-dev:41883].

Fri Jul 30 07:47:21 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* instruby.rb (ext-arch): prune directories start with '-'.
	  backported r28654 from the trunk.

Thu Jul 29 22:43:57 2010  NAKAMURA, Hiroshi  <nahi@ruby-lang.org>

	* lib/webrick/ssl.rb (WEBrick::Utils.create_self_signed_cert): wrongly
	  created dummy SSL certificate with version == 3 (no such version) and
	  serial == 0 (must be >0).

Wed Jul 28 19:41:37 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* include/ruby/missing.h: shouldn't declare as dllimport when building
	  ruby itself (for Windows).

Wed Jul 28 17:11:48 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* missing/*.c: include missing.h

Tue Jul 27 18:33:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* defines.h, intern.h, missing.h, ruby.h, st.h, util.h: include
	  config.h and defines.h for autoconf macros.

Mon Jul 26 18:18:09 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (config.h): add include guard.
