@@ -1,0 +1,2 @@
+warn "Use RbConfig instead of obsolete and deprecated Config."
+Config = RbConfig # compatibility for ruby-1.8.4 and older.
