@@ -1,3 +1,8 @@
+Sat Aug  7 17:40:24 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* mkconfig.rb, lib/rbconfig/obsolete.rb: warn obsolete and
+	  deprecated Config.
+
 Thu Aug  5 11:55:17 2010  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* ext/socket/socket.c: use _() macro instead of __P(), because the
